--- a/W6D1-Gestures-and-Animations/Base.lproj/Main.storyboard
+++ b/W6D1-Gestures-and-Animations/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,15 +12,59 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="W6D1_Gestures_and_Animations" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afc-N2-uia">
+                                <rect key="frame" x="150" y="296" width="75" height="75"/>
+                                <color key="backgroundColor" red="0.90980392160000001" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="EiE-wL-aWi"/>
+                                    <constraint firstAttribute="height" constant="75" id="SRC-Jo-t3t"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="25a-ol-ZqR" appends="YES" id="H7z-t3-cnx"/>
+                                    <outletCollection property="gestureRecognizers" destination="h6x-Mo-gcv" appends="YES" id="5O3-tz-vCg"/>
+                                    <outletCollection property="gestureRecognizers" destination="Tz8-K4-nfF" appends="YES" id="Ij5-8r-fpl"/>
+                                    <outletCollection property="gestureRecognizers" destination="v3s-Qw-5Vf" appends="YES" id="zqH-Hh-EE9"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="afc-N2-uia" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SJ8-82-p5S"/>
+                            <constraint firstItem="afc-N2-uia" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ii0-ID-a0m"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="box" destination="afc-N2-uia" id="P8S-z4-wxO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="25a-ol-ZqR">
+                    <connections>
+                        <action selector="didTapBox:" destination="BYZ-38-t0r" id="mTv-5k-s6o"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <pinchGestureRecognizer id="h6x-Mo-gcv">
+                    <connections>
+                        <action selector="didPinchBox:" destination="BYZ-38-t0r" id="NtP-Ch-q6T"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="Tz8-K4-nfF">
+                    <connections>
+                        <action selector="didRotateBox:" destination="BYZ-38-t0r" id="tJh-n8-eY0"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="v3s-Qw-5Vf">
+                    <connections>
+                        <action selector="didPanBox:" destination="BYZ-38-t0r" id="dZo-vP-yJi"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
         </scene>
     </scenes>
